<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">LoveWords</string>

    <string name="cheese_ipsum">Jarlsberg lancashire edam. Dolcelatte hard cheese brie st. agur blue
    cheese caerphilly bavarian bergkase cheese and biscuits mascarpone. Cheeseburger swiss bavarian
    bergkase cream cheese fromage frais cheesy feet port-salut airedale. St. agur blue cheese rubber
    cheese caerphilly cheddar cheesecake cream cheese manchego lancashire. Roquefort squirty cheese
    the big cheese.</string>

    <string name="checkin">Checkin</string>

    <string name="query">Search</string>
    <string name="alarm_notice">No Alarms</string>
    <string name="edit_hint">Type In...</string>

    <string name="title_activity_login">Sign in</string>

    <!-- Strings for layout_guidecome page -->
    <string name="welcome">Welcome to LoveWords</string>
    <string name="welcome_content_1">Look up a word</string>
    <string name="welcome_content_2">Set a reminder</string>
    <string name="welcome_content_3">Start playing</string>
    <string name="welcome_content_4">Earn points</string>

    <!-- Strings related to login -->
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="prompt_username">User Name</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_register">Register</string>
    <string name="appwidget_text">Widget of LoveWords</string>
    <string name="add_widget">Add widget</string>

    <string name="words_mastered">A list of all the words you\'ve mastered. Unfortunately, you haven\'t mastered any words yet. Don\'t despair, Keep Playing!</string>
    <!--Strings of Achievement tutor-->
    <string name="achievement_instruction">Below is a list of all the achievements you\'ve earned on LoveWords. Keep playing and you\'ll gain more achievements.</string>
    <string name="title_activity_word_detail">WordDetail</string>
</resources>
